feat: solution auth
