# app/Http/Resources/UserResource.php
@@ -15,11 +15,10 @@ class UserResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'id' => $this->id,
-            'name' => $this->name,
-            'email' => $this->email,
-            'created_at' => $this->created_at,
-            'updated_at' => $this->updated_at,
+            'user' => $this->user,
+            'roles' => $this->roles,
+            'permissions' => $this->permissions,
+
         ];
     }
 }
